feat: call to action cards ab test (#2000)

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" *ngIf="showCallAction">
   <div class="col-12 col-md-6">
     <ngx-call-action-card [title]="'Need a custom solution?'"
                           [type]="'pantone'"
